# rprpp

apps/common/: HybridProRenderer.cpp  HybridProRenderer.h  RprPostProcessing.h  rpr_helper.cpp  rpr_helper.h
apps/consoleapp/: main.cpp
apps/glfwapp/: CMakeLists.txt  Dx11App.cpp  NoAovsInteropApp.cpp  NoAovsInteropApp.h  WithAovsInteropApp.cpp  WithAovsInteropApp.h  dx_helper.h  main.cpp
capi/: rprpp.cpp  rprpp.h
src/: DescriptorBuilder.h  Error.cpp  Error.h  PostProcessing.cpp  PostProcessing.h  vk_helper.cpp  vk_helper.h
src/shaders/: post_processing.comp
